// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainLayout /> should render to match snapshot 1`] = `
<DocumentFragment>
  .dark .c0 {
  --tw-bg-opacity: 1;
  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
}

.dark .c0 {
  --tw-text-opacity: 1;
  color: rgb(156 163 175 / var(--tw-text-opacity));
}

.c1 {
  --tw-bg-opacity: 1;
  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
  --tw-text-opacity: 1;
  color: rgb(107 114 128 / var(--tw-text-opacity));
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  min-height: 100vh;
}

.dark .c0 {
  --tw-bg-opacity: 1;
  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
}

.dark .c0 {
  --tw-text-opacity: 1;
  color: rgb(156 163 175 / var(--tw-text-opacity));
}

.c3 {
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.dark .c2 {
  --tw-bg-opacity: 1;
  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  height: 100%;
  overflow-x: auto;
}

<div
    class="c0 c1"
  >
    <div>
      <button
        data-testid="btn2"
      >
        Menu Item
      </button>
    </div>
    <div
      class="c2 c3"
    >
      <div>
        <button
          data-testid="btn1"
        >
          Toggle Sidebar
        </button>
      </div>
      <div
        class="c4"
        data-testid="scrollable-content"
      >
        <div>
          Container Footer Template
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<MainLayout /> should render to wrong location path 1`] = `
<DocumentFragment>
  .c1 {
  --tw-bg-opacity: 1;
  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
  --tw-text-opacity: 1;
  color: rgb(107 114 128 / var(--tw-text-opacity));
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  position: relative;
  height: 100vh;
}

.dark .c0 {
  --tw-bg-opacity: 1;
  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
}

.dark .c0 {
  --tw-text-opacity: 1;
  color: rgb(156 163 175 / var(--tw-text-opacity));
}

.c3 {
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.dark .c2 {
  --tw-bg-opacity: 1;
  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  height: 100%;
  overflow-x: auto;
}

<div
    class="c0 c1"
  >
    <div>
      <button
        data-testid="btn2"
      >
        Menu Item
      </button>
    </div>
    <div
      class="c2 c3"
    >
      <div>
        <button
          data-testid="btn1"
        >
          Toggle Sidebar
        </button>
      </div>
      <div
        class="c4"
        data-testid="scrollable-content"
      >
        <div>
          Container Footer Template
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
